MD Settings: show when the default search engine is controlled by policy

R=dpapad@chromium.org
BUG=711063
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2835933007
Cr-Commit-Position: refs/heads/master@{#467476}

Former-commit-id: 0e5bf385b3882b6a124ace5495c957e735b5ffcc